--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,7 +16,7 @@ jobs:
       # Generate PDF from resume.md file
       - uses: baileyjm02/markdown-to-pdf@v1
         with:
-          input_path: resume.md
+          input_path: ./resume.md
           output_dir: .
           build_html: false
       # Commit resume.pdf file back into repository
