--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,6 +17,7 @@ jobs:
       - uses: baileyjm02/markdown-to-pdf@v1
         with:
           input_path: ./resume.md
-          build_html: false
+          output_dir: ./
+          build_html: true
       # Commit resume.pdf file back into repository
       - uses: stefanzweifel/git-auto-commit-action@v5
