--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,7 +22,7 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v5
       # Execute script to add a content hash to all asset links in generated site
       - name: Copy HTML file into '_site' folder
-        run: cp ./src/resume.html ./_site
+        run: cp ./src/resume.html ./_site/
       # Upload generated site as an artifact so the following jobs can access it
       - name: Upload website artifact
         uses: actions/upload-pages-artifact@v2
